# hackathon-2021-autumn

./: .gitignore  README.md
teams/00-团队模板/: README.md
teams/01-Web3Pioneer/: README.md
teams/02-Web3go/: README.md
teams/03-Decoder/: README.md
teams/03-Decoder/src/: Magicfarm.sol
teams/04-Dandelion Network/: README.md
teams/04-DandelionNetwork/: README_backup.md
teams/04-DandelionNetwork/docs/: DandelionDAO生态介绍.pptx
teams/04-DandelionNetwork/src/backend/: .editorconfig  .envrc  .gitignore  Cargo.toml  README.md  shell.nix
teams/04-DandelionNetwork/src/backend/.devcontainer/: devcontainer.json
teams/04-DandelionNetwork/src/backend/.github/ISSUE_TEMPLATE/: ask-a-question.md  report-a-bug.md  suggest-a-feature.md
teams/04-DandelionNetwork/src/backend/.github/workflows/: check.yml
teams/04-DandelionNetwork/src/backend/node/: Cargo.toml
teams/04-DandelionNetwork/src/backend/node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
teams/04-DandelionNetwork/src/backend/pallets/dandelion/: Cargo.toml
teams/04-DandelionNetwork/src/backend/pallets/dandelion/src/: benchmarking.rs  lib.rs
teams/04-DandelionNetwork/src/backend/rpc/: Cargo.toml
teams/04-DandelionNetwork/src/backend/rpc/src/: lib.rs
teams/04-DandelionNetwork/src/backend/runtime/: Cargo.toml
teams/04-DandelionNetwork/src/backend/runtime/src/: lib.rs
teams/04-DandelionNetwork/src/frontend/: README.md  config-overrides.js  package-lock.json  package.json
teams/04-DandelionNetwork/src/frontend/public/: index.html
teams/04-DandelionNetwork/src/frontend/src/: AccountSelector.js  App.js  Interactor.js  Query.js  Transfer.js  Upgrade.js  index.js  router.js  setupProxy.js
teams/04-DandelionNetwork/src/frontend/src/config/: common.json  development.json  test.json
teams/04-DandelionNetwork/src/frontend/src/redux/: action.js  index.js  reducers.js  store.js
teams/04-DandelionNetwork/src/frontend/src/substrate-lib/components/: TxButton.js
teams/04-DandelionNetwork/src/frontend/src/views/: Allcomponent.js  Home.jsx  index.js  layout.jsx  upload.jsx  user.jsx  workspace.jsx
teams/04-DandelionNetwork/src/frontend/src/views/style/: layout.css
teams/05-EternityLabs/: README.md
teams/05.AdvaitaHealth 非二健康/: README.md
teams/06-AdvaitaHealth-非二健康/: README.md
teams/0X-Web3Pioneer/: README.md
teams/Decoder/: README.md
teams/Web3-Analytics/: README.md
